# slice-copy

./: Cargo.toml  README.md
src/: lib.rs
